@@ -1564,6 +1564,15 @@ LIBHARP_API int harp_variable_append(harp_variable *variable, const harp_variabl
         harp_set_error(HARP_ERROR_INVALID_ARGUMENT, "variables don't have the same datatype (%s)", variable->name);
         return -1;
     }
+    if (variable->unit != NULL || other_variable->unit != NULL)
+    {
+        if (variable->unit == NULL || other_variable->data_type == NULL ||
+            harp_unit_compare(variable->unit, other_variable->unit) != 0)
+        {
+            harp_set_error(HARP_ERROR_INVALID_ARGUMENT, "variables don't have the same unit (%s)", variable->name);
+            return -1;
+        }
+    }
     if (variable->num_dimensions != other_variable->num_dimensions)
     {
         harp_set_error(HARP_ERROR_INVALID_ARGUMENT, "variables don't have the same number of dimensions (%s)",
